# CARDS_Extension

./: .gitignore  README.md  cmd_dll.bat  cpp.editorconfig  csharp.editorconfig  dll.txt  dll_Debug.txt  dll_Release.txt  folder_Debug.txt  folder_Release.txt  open_logs_unity.bat  open_logs_unity_build.bat  sync_dll.bat  sync_dll.py  sync_dll_debug.bat  sync_dll_release.bat  syncdll.py
anotation/: anotation.xml  recording_video.py  vid_to_anotate.py
camera_calibration/: CMakeLists.txt  calibration.py  calibration.xml  camera_calibration.cpp  create_data_calib.py  default.xml
cards_rgbtrack/: cards_rgbtrack.sln  cards_rgbtrack.vcxproj  cards_rgbtrack.vcxproj.filters
cards_rgbtrack/include/: calibration_api.h  interfaceTracker.cpp  interfaceTracker.h  interface_tracker.h  multitracker.h  test.h  tracker.h  trackerColor.h  tracker_api.h  tracker_color.h  utilitaries.h  utilities.h  utilities_api.h  video_api.h  videoprovider.h
cards_rgbtrack/src/: calibration_api.cpp  internal_utilities.cpp  multitracker.cpp  object_detection.cpp  test.cpp  tracker.cpp  trackerColor.cpp  tracker_api.cpp  tracker_color.cpp  utilitaries.cpp  utilities.cpp  utilities_api.cpp  video_api.cpp  videoprovider.cpp
console/: README.md  console.sln  console.vcxproj  console.vcxproj.filters  test.xml
console/include/: console.h  videoprovider.h  videoproviderconsole.h
console/src/: console.cpp  videoprovider.cpp  (+1 more)
videos_tests/: fast_movements.xml  handwritten_text.xml  lighting_change.xml  multiple_targets.xml  occlusions.xml  printed_picture.xml  printed_text.xml  single_target.xml
(+72 files in other folders)
